--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Savitar</string>
+    <string name="app_name">Savitar Admin</string>
     <string name="login">Login</string>
     <string name="password">Password</string>
     <string name="email">Email</string>
